# cs202-dungeon-game

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  generate_maps.py  remove_white.py  settings.json
assets/animations/: characters.json  serin.json  tile-map.json
documents/: CS202-FinalProject_SuperMario.md  architecture.puml  game-description.md  implementation-plan.md  task-list.md  ui-framework-usage.md  ui-framework.md
documents/drafting/: drafting.md
documents/reports/week-04/: Group53_04.md  game-description.md
documents/reports/week-05/: Group53.md
documents/reports/week-06/: Group53.md
documents/seminar/: design-patterns-seminar.md
documents/seminar/decorator/: decorator.md
documents/seminar/facade/: facade.md
documents/seminar/strategy/: strategy.md
maps/level1/: chamber1.json  chamber2.json  chamber3.json
src/: main.cpp  ui-test.cpp
src/chambers/: chamber-factory.cpp  chamber-factory.hpp  chamber.cpp  chamber.hpp  gauntlet-chamber.cpp  gauntlet-chamber.hpp  mid-chamber.cpp  mid-chamber.hpp  prevent-chamber.cpp  prevent-chamber.hpp  protect-chamber.cpp  protect-chamber.hpp  test-chamber.cpp  test-chamber.hpp  tile-map-generator.cpp  tile-map-generator.hpp
src/core/: enums.hpp  game-state.cpp  game-state.hpp  game.cpp  game.hpp  run-state.hpp  state-manager.cpp  state-manager.hpp
src/core/states/: choose-chamber-state.cpp  choose-chamber-state.hpp  game-over-state.cpp  game-over-state.hpp  game-play-state.cpp  game-play-state.hpp  main-menu-state.cpp  main-menu-state.hpp  pause-state.cpp  pause-state.hpp  setting-state.cpp  setting-state.hpp
src/economy/: echo.cpp  echo.hpp  item-manager.cpp  item-manager.hpp  item.cpp  item.hpp
src/entities/: character.cpp  character.hpp  playable-character.cpp  playable-character.hpp  player-form.cpp  player-form.hpp  player.cpp  player.hpp  stats.cpp  stats.hpp  status-effect.cpp  status-effect.hpp
src/entities/animation/: animation.cpp  animation.hpp  character-animator.cpp  character-animator.hpp
src/entities/effects/: burned-effect.cpp  burned-effect.hpp  paralyzed-effect.cpp  paralyzed-effect.hpp  slowed-effect.cpp  slowed-effect.hpp  status-effect.cpp  status-effect.hpp
src/entities/enemies/: enemy.hpp
src/entities/enemy/: bone-sprinter.cpp  bone-sprinter.hpp  enemy-factory.cpp  enemy-factory.hpp  enemy-state.cpp  enemy-state.hpp  enemy-steering-strategy.cpp  enemy-steering-strategy.hpp  enemy.cpp  enemy.hpp  shard-soldier.cpp  shard-soldier.hpp  waterlogged-scribe.cpp  waterlogged-scribe.hpp
src/entities/forms/: ironshell-form.cpp  ironshell-form.hpp  voidcaster-form.cpp  voidcaster-form.hpp  wraithblade-form.cpp  wraithblade-form.hpp
src/entities/items/: echo-fragment.cpp  echo-fragment.hpp  item.cpp  item.hpp
src/global-settings/: animation-manager.cpp  animation-manager.hpp  asset-manager.cpp  asset-manager.hpp  color-palette-manager.cpp  color-palette-manager.hpp  map-loader.cpp  map-loader.hpp  save-load-manager.cpp  save-load-manager.hpp  setting-manager.cpp  setting-manager.hpp  sound-manager.cpp  sound-manager.hpp  tile-manager.cpp  tile-manager.hpp
src/ui/base/: SetterMixin.cpp  SetterMixin.hpp  component.cpp  component.hpp  text.cpp  text.hpp
src/ui/containers/: container.cpp  container.hpp  container.tpp  flex-box.cpp  flex-box.hpp  horizontal-box.hpp  vertical-box.hpp
src/ui/widgets/: button.cpp  button.hpp  slider.cpp  slider.hpp  text-input.cpp  text-input.hpp
src/utils/: collision-solver.cpp  collision-solver.hpp  math-utility.cpp  math-utility.hpp  pathfinder.cpp  pathfinder.hpp
